--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
 	padding: 20px 30px;
 	background-color: #fff;
 	margin: 100px auto 0;
+	border-radius: 10px;
 }
 .content .content-top {
 	height: 12px;
@@ -23,17 +24,62 @@ body{
 .content .content-bottom {
 	height: 12px;
 	background-image: url(img/content-bg.png);
-	background-position: 0 -840px;
-	
+	background-position: 840px 0;
 }
-.content .content-middle {}
+.content .content-middle {
+		padding: 20px 30px;
+}
 
-h1 { }
-h2 { }
+h1 { 
+font-size: 26px;
+line-height: 36px;
+color: #2b8c57;
+font-weight: normal;
+margin-bottom: 10px;
+}
+h2 { 
+font-size: 18px;
+line-height: 28px;
+color: #2b8c57;
+font-weight: normal;
+font-style: italic;
+margin: 30px 0 15px 0;
+}
 
-div.block-1 {}
-div.block-2 {}
+div.block-1 {
+	background-color: #2b8c57;
+	background-image: url(img/block-1-bg.png);
+	background-repeat: repeat-x;
+	color: white;
+	font-style: italic;
+	font-size: 12px;
+	padding: 20px 30px;
+}
 
-a.button {}
-a.button:hover {}
-a.button:active {}
+div.block-2 {
+	background-color: #356149;
+	background-image: url(img/picture-1.png);
+	background-repeat: no-repeat;
+	color: white;
+	background-position:692px 15px;
+	font-style: italic;
+	padding: 20px 30px;
+}
+
+a.button {
+	background-image: url(img/button-1.png);
+	background-repeat: no-repeat;
+
+	background-position: 0 0;
+	display: block;
+	width: 121px;
+	height: 38px;
+	text-decoration: none;
+	
+	}
+a.button:hover {
+	background-position: 0 -38px;
+}
+a.button:active {
+	background-position: 0 -76px;
+}
